finished some defense mode code, will need to check on that though

--- a/react-yugioh/src/containers/game/Game.css
+++ b/react-yugioh/src/containers/game/Game.css
@@ -14,3 +14,13 @@
 .no-padding {
     padding: 0;
 }
+
+.lifepoints {
+    color: yellow;
+    background-color: blue;
+    display: inline;
+}
+
+.padding-between-lifepoints{
+    margin: 15px;
+}
